@@ -112,7 +112,7 @@ function Grant-Privilege
             {
                 $msg = 'Failed to grant {0} {1} privilege(s): {2}  *Privilege names are **case-sensitive**.*' -f `
                         $Identity,($Privilege -join ','),$ex.Message
-                Write-Error -Message $msg -Exception $ex
+                Write-Error -Message $msg
                 return
             }
             else
@@ -123,8 +123,7 @@ function Grant-Privilege
         while( $ex )
 
         $ex = $_.Exception        
-        Write-Error -Message ('Failed to grant {0} {1} privilege(s): {2}' -f $Identity,($Privilege -join ', '),$ex.Message) `
-                    -Exception $ex
+        Write-Error -Message ('Failed to grant {0} {1} privilege(s): {2}' -f $Identity,($Privilege -join ', '),$ex.Message)
         
         while( $ex.InnerException )
         {
